name:          abelian
category:      Algebra
version:       0
license:       BSD2
cabal-version: >= 1.8
license-file:  LICENSE.md
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     provisional
homepage:      http://github.com/ekmett/abelian/
bug-reports:   http://github.com/ekmett/abelian/issues
copyright:     Copyright (C) 2018 Edward A. Kmett
synopsis:      Commutativity
description:   Commutativity.
build-type:    Simple
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/ekmett/abelian.git

library
  build-depends:
    base          >= 4.11 && < 5,
    base-orphans  >= 0.7 && < 0.8,
    comonad       >= 5 && < 6,
    containers    >= 0.5 && < 0.6,
    free          >= 5 && < 6,
    linear        >= 1.20 && < 2,
    mtl           >= 2.2 && < 2.3,
    semigroupoids >= 5 && < 6,
    tagged        >= 0.0 && < 1,
    transformers  >= 0.3 && < 0.6
  hs-source-dirs:  src
  exposed-modules: 
    Control.Commutative
    Control.Commutative.Monad.Free
    Control.Commutative.Monad.List
    Control.Commutative.Monad.Trans
    Data.Functor.Comm
    Data.Semigroup.Commutative

  ghc-options: -Wall
